<!-- author: Bartosz Gajda -->
<!-- matricNumber: S1631175 -->
<resources>
    <string name="app_name">MobilePlatformDevelopment</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_incidents_group">Incidents</string>
    <string name="menu_incidents_list">Incidents List</string>
    <string name="menu_incidents_map">Incidents on Map</string>

    <string name="menu_roadworks_group">Roadworks</string>
    <string name="menu_roadworks_list">Roadworks List</string>

    <string name="menu_planner_group">Planner</string>
    <string name="menu_planner">Journey Planner</string>

    <string name="search">Search road…</string>

    <string name="roadworks_menu_filter">Filter feed</string>
    <string name="roadworks_menu_filter_title">Choose feed data</string>
    <string name="roadworks_menu_date">Specify date</string>
    <string name="roadworks_feed_changed">Feed updated</string>
    <string name="roadworks_date_changed">Date updated</string>

    <string name="roadworks_type_current">Current Roadwork</string>
    <string name="roadworks_type_planned">Planned Roadwork</string>
    <string name="roadworks_show_on_map">Show on Map</string>

    <string name="planner_description">Type in origin place name (eg. Glasgow), destination place name (eg. Edinburgh), and you will be presented with current (red marker) and planned (yellow marker) roadworks on this route. Click on a marker to get more information.</string>
    <string name="planner_origin">Origin…</string>
    <string name="planner_destination">Destination…</string>
    <string name="planner_plan">Show Route and Roadworks</string>
</resources>
