<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_incidents_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_incidents_list"
                    android:icon="@drawable/announcement_24px"
                    android:title="@string/menu_incidents_list" />
                <item
                    android:id="@+id/nav_incidents_map"
                    android:icon="@drawable/map_24px"
                    android:title="@string/menu_incidents_map" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_roadworks_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_roadworks_list"
                    android:icon="@drawable/square_foot_24px"
                    android:title="@string/menu_roadworks_list" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_planner_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_planner"
                    android:icon="@drawable/navigation_24px"
                    android:title="@string/menu_planner" />
            </group>
        </menu>
    </item>

</menu>
