<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/planner_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/planner_origin" />

    <EditText
        android:id="@+id/planner_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/planner_destination" />

    <Button
        android:id="@+id/planner_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/planner_plan" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/planner_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>